<resources>
    <string name="app_name">ToDoList</string>
    <string name="title">Your Own To Do List</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="user">Username</string>
    <string name="app_logo">App logo</string>
    <string name="background">background</string>
    <string name="createAccount">Crea una cuenta</string>
    <string name="addbutton">addButton</string>
    <string name="settingsbutton">settingsButton</string>
    <string name="list">list</string>
</resources>