<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/background"
        android:contentDescription="@string/background"
        />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:textSize="50sp"
        android:ems="10"
        android:text="@string/title"
        android:textAlignment="center"
        android:layout_marginStart="0dp"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/font1"
        android:textColor="@color/dark_grey"
        />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:srcCompat="@drawable/logo"
        android:layout_marginStart="125dp"
        android:layout_marginTop="200dp"
        android:contentDescription="@string/app_logo" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/title"
        android:background="@drawable/rounded"
        android:layout_marginTop="250dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        >


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textEmail"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:layout_marginStart="50dp"
            android:layout_marginTop="30dp"
            android:hint="@string/user"
            android:autofillHints="true"
            style="@style/CodeFont">
            <requestFocus/>
        </com.google.android.material.textfield.TextInputEditText>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textPass"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:layout_marginStart="50dp"
            android:layout_marginTop="20dp"
            style="@style/CodeFont"
            android:layout_marginBottom="20dp"
            />

    </LinearLayout>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/button"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_marginStart="60dp"
        android:layout_marginTop="580dp"
        android:fontFamily="@font/font1"
        android:textSize="20sp"
        android:textStyle="bold"
        android:onClick="login"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/createAccount"
        android:textSize="18sp"
        android:layout_marginStart="130dp"
        android:layout_marginTop="630dp"
        android:layout_marginBottom="20dp"
        android:textStyle="bold"
        style="@style/CodeFont"
        android:onClick="signup"
        />

</RelativeLayout>